Fri Jun 29 18:32:57 2001  George Lebl <jirka@5z.com>

	* basep-widget.c:  fix hide position getting to fix hidden small
	  panels being out of place

Thu Jun 28 13:03:45 2001  George Lebl <jirka@5z.com>

	* main.[ch], menu.c, gnome-run.c:  Make screen checking optional,
	  which should make telsa happy.

Fri Jun 22 23:15:50 2001  George Lebl <jirka@5z.com>

	* menu.c, gnome-panel-properties.c, panel_config_global.h,
	  session.c: Make menu titles optional and off by default.  In
	  the right click menu add a submenu for "Entire menu" so that
	  one can have most of the funcationality that menu titles had
	  without them

	* menu.[ch], menu-fentry.h, foobar-widget.c, gnome-run.c: make an
	  add to favourites menu item to make favourites easier to use

	* menu.c: fix try_pixmap function to setup correct size, this fixes
	  the problem of distribution menus being small even when icons are
	  large

2001-06-07  Christian Rose  <menthos@menthos.com>

	* panel/panel.soundlist: Added Swedish translation.

2001-06-06  Anders Carlsson  <andersca@codefactory.se>

	* gnome-panel-screenshot.c (add_file_to_path): If we have a
	class_name that is not NULL, append it to the file name.
	(find_toplevel_window): New function to find a toplevel window,
	ie the window that stores the WM_CLASS hint that we want
	to use.
	(take_window_shot): Check if the window being captured has
	got a toplevel that has a WM_CLASS hint defined and get the
	window class name from it in that case.
	(drag_begin): Add the screenshot preview as a drag icon
	pixmap.

Mon Jun  4 22:49:13 2001  Jonathan Blandford  <jrb@webwynk.net>

	* gnome-panel-screenshot.c (print_pixbuf): Small change to set
	watch/sensitivity for print dialog when doing a print preview.

Tue Jun 05 03:03:58 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c: Use a temporary directory rather then
	  just a file, this has two advantages, better (read more securely)