@@ -1,3 +1,8 @@
+Thu Jul 05 15:46:36 2001  George Lebl <jirka@5z.com>
+
+	* menu.c: applied a patch from ghudson@mit.edu (Greg Hudson) to fix
+	  add to panel with NO_XALF included
+
 Fri Jun 29 18:32:57 2001  George Lebl <jirka@5z.com>
 
 	* basep-widget.c:  fix hide position getting to fix hidden small
